Correction bug switch dark mode sur téléphone

--- a/css/switcher.css
+++ b/css/switcher.css
@@ -47,14 +47,17 @@
     transform: rotate(180deg)
 }
 
-.switcher:hover i {
-    max-width: 100%;
-    padding: 0 calc(var(--spacing)/ 2) 0 calc(var(--spacing)/ 4);
-    transition: max-width var(--transition), padding var(--transition)
-}
 
 @media (min-width:576px) {
     .switcher {
         right: calc(var(--spacing) + var(--scrollbar-width, 0px))
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .switcher:hover i {
+        max-width: 100%;
+        padding: 0 calc(var(--spacing)/ 2) 0 calc(var(--spacing)/ 4);
+        transition: max-width var(--transition), padding var(--transition)
     }
 }
